# yartsu

./: .flake8  .gitignore  .pre-commit-config.yaml  .task.cfg.mk  404.html  LICENSE.txt  Makefile  README.md  index.html  mkdocs.yml  preamble.py  pyoxidizer.bzl  pyproject.toml  sitemap.xml  todo.md
.github/workflows/: build.yml  docs.yml  nightly.yml  pypi.yml  release.yml
assets/: logo-minimal.txt  logo.txt
docs/: index.md  rich-diff.md  themes.md
rich-diff/: index.html
scripts/: catppuccin-colors  code_svg_format_diff.py  rich-diff  theme-showcase-gen
search/: search_index.json
src/yartsu/: _themes.py  _version.py  cli.py  term.py  theme.py  themes.py
src/yartsu/themes/: cat-frappe.json  cat-latte.json  cat-macchiato.json  cat-mocha.json  dracula.json  gruvbox-dark.json  gruvbox-light.json  nord.json
themes/: index.html
yartsu/: _export_format.py  _run_cmd.py  argparse.py  cli.py  console.py  term.py  themes.py
