[project]
name = "yartsu"
description = "yartsu, another rich terminal screenshot utility"
authors = [
    {name = "Daylin Morgan", email = "daylinmorgan@gmail.com"},
]
readme = "README.md"
dependencies = [
    "rich>=12.3.0",
    "importlib-metadata>=4.11.4; python_version < \"3.8\"",
]
requires-python = ">=3.7"
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
yartsu = "yartsu.cli:main"

[project.optional-dependencies]
[tool.pdm]
version = {use_scm = true}

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.18.1",
    "mypy>=0.961",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
