[project]
name = "yartsu"
description = "yartsu, another rich terminal screenshot utility"
authors = [
    {name = "Daylin Morgan", email = "daylinmorgan@gmail.com"},
]
readme = "README.md"
dependencies = [
    "rich>=13.3.5",
    "importlib-metadata>=4.11.4; python_version < \"3.8\"",
]
requires-python = ">=3.7"
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/daylinmorgan/yartsu"
Repository = "https://github.com/daylinmorgan/yartsu"

[project.scripts]
yartsu = "yartsu.cli:main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.11",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.18.1",
    "mypy>=0.961",
]

[tool.pdm.build]
includes = ["src", "src/yartsu/themes"]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.ruff]
select = ["F", "E", "W", "I001"]
exclude = ["scripts"]
[tool.ruff.per-file-ignores]
# I guess they don't mind some long lines?
"src/yartsu/_export_format.py" = ["E501"]
"src/yartsu/console.py" = ["E501"]
